src/compiletest/tlcell-16.stderr
error[E0308]: mismatched types
 --> src/compiletest/tlcell-16.rs:9:22
  |
9 |     let mut owner1 = TLCellOwner::<MarkerA>::new() as TLCellOwner<MarkerB>;  // Compile fail
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
  |
  = note: expected struct `TLCellOwner<fn(&'static ())>`
             found struct `TLCellOwner<for<'r> fn(&'r ())>`
